services/user-service/infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-app
  labels:
    app: user-app
spec:
  replicas: 2
  template:
    metadata:
      name: user-app
      labels:
        app: user-app
    spec:
      containers:
        - name: user-app
          image: akozhin/otus-user-service:0.0.2-SNAPSHOT
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: 8080
            initialDelaySeconds: 10
          livenessProbe:
            httpGet:
              path: /health/liveness
              port: 8080
            initialDelaySeconds: 10
          volumeMounts:
            - mountPath: "/app"
              name: cfg
      volumes:
        - name: cfg
          configMap:
            name: user-app-cfg
      restartPolicy: Always
  selector:
    matchLabels:
      app: user-app
