services/user-service/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-app
                port:
                  number: 8000
          - path: /otusapp/akozhin(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: user-app
                port:
                  number: 8000
